# backend/src/routers/visit.routes.ts
@@ -1,9 +1,9 @@
 import Router from "koa-router";
 import visitService from "../services/visit.service";
-import { Visit } from "../interfaces/visit";
+import { GetPopularVisit, Visit } from "../interfaces/visit";
 import response from "../utils/response";
 import { decMiddleware, validateMiddlewareFactory } from "../middlewares/middlewares";
-import { getVisitObject } from "../object/visit";
+import { getVisitCreateObject, getVisitObject } from "../object/visit";
 
 
 const router = new Router({
@@ -17,11 +17,22 @@ router.get('/', validateMiddlewareFactory(getVisitObject), async (ctx) => {
         #swagger.parameters[$ref] = ["#/components/parameters/target"]
     */
     const query: Visit = ctx.request.query as unknown as Visit;
-    const result = await visitService.getVisit(query.target)
+    const result = await visitService.getVisit(query)
     ctx.body = response.makeSuccessBody({list: result});
 })
 
-router.post('/', decMiddleware, validateMiddlewareFactory(getVisitObject), async (ctx) => {
+router.get('/popular', async (ctx) => {
+    /*	
+        #swagger.tags = ['Visit']
+        #swagger.summary = 'Get popular tags'
+        #swagger.parameters[$ref] = ["#/components/parameters/limit", "#/components/parameters/type"]
+    */
+    const query: GetPopularVisit = ctx.request.query as unknown as GetPopularVisit;
+    const result = await visitService.getPopularVisit(query)
+    ctx.body = response.makeSuccessBody({list: result});
+})
+
+router.post('/', decMiddleware, validateMiddlewareFactory(getVisitCreateObject), async (ctx) => {
     /*	
         #swagger.tags = ['Visit']
         #swagger.summary = 'post visit'
@@ -39,8 +50,9 @@ router.post('/', decMiddleware, validateMiddlewareFactory(getVisitObject), async
         }
     */
     const body: Visit = ctx.request.body as Visit;
-    const result = await visitService.addVisit(ctx.ip, body.target)
+    const result = await visitService.addVisit(ctx.ip, body.target, body.type)
     ctx.body = response.makeSuccessBody(result);
 })
+
 
 export default router
